nenolod     2005/09/07 18:21:20 UTC	(20050907-2201)
  Log:
  Clear out events on struct pollfd when we are through handling the poll. 
  (This way we dont look to make a write if we have nothing to write.)
  

  Modified:
	trunk/libatheme/poll.c (File Modified) 


nenolod     2005/09/07 18:12:20 UTC	(20050907-2199)
  Log:
  - Solve duplicate FD issue in poll.c.
  - Remove usleep() hack that we shouldn't need anymore.
  

  Modified:
	trunk/libatheme/connection.c (File Modified) 
	trunk/libatheme/poll.c (File Modified) 
	trunk/libatheme/select.c (File Modified) 


pfish       2005/09/07 04:52:49 UTC	(20050907-2197)
  Log:
  fix notice origin
  

  Modified:
	trunk/modules/nickserv/freeze.c (File Modified) 


pfish       2005/09/07 04:37:04 UTC	(20050907-2195)
  Log:
  enable help for freeze
  

  Modified:
	trunk/modules/nickserv/help.c (File Modified) 


nenolod     2005/09/07 04:33:09 UTC	(20050907-2193)
  Log:
  Remove code that did no good.
  

  Modified:
	trunk/src/atheme.c (File Modified) 


nenolod     2005/09/07 04:30:03 UTC	(20050907-2191)
  Log:
  Memory corruption fix.
  

  Modified:
	trunk/src/node.c (File Modified) 


nenolod     2005/09/07 03:56:50 UTC	(20050907-2189)
  Log:
  Fix restart retardedness.
  

  Modified:
	trunk/src/atheme.c (File Modified) 


nenolod     2005/09/07 03:47:06 UTC	(20050907-2187)
  Log:
  Add tracking of oper and invisible users. (statistical information)
  

  Modified:
	trunk/src/cmode.c (File Modified) 


nenolod     2005/09/07 02:43:08 UTC	(20050907-2185)
  Log:
  Add server uplink/child tracking.
  

  Modified:
	trunk/include/extern.h (File Modified) 
	trunk/include/servers.h (File Modified) 
	trunk/modules/userserv/Makefile.in (File Modified) 
	trunk/protocol/asuka.c (File Modified) 
	trunk/protocol/bahamut.c (File Modified) 
	trunk/protocol/bircd.c (File Modified) 
	trunk/protocol/dreamforge.c (File Modified) 
	trunk/protocol/hyperion.c (File Modified) 
	trunk/protocol/inspircd.c (File Modified) 